--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.infinoa</groupId>
+    <groupId>com.infinova</groupId>
     <artifactId>netty</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -12,13 +12,21 @@
         <netty-version>4.1.20.Final</netty-version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>${netty-version}</version>
-        </dependency>
-    </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty-version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+
+<modules>
+    <module>netty-demo1</module>
+</modules>
 
 
 </project>
