--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.infinova</groupId>
     <artifactId>netty</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -26,6 +27,7 @@
 
 <modules>
     <module>netty-demo1</module>
+    <module>netty-chat</module>
 </modules>
 
 
